# fox-calculator

./: CMakeLists.txt  README.md  run.sh  tree.md
include/common/: NumberEx.h  utils.h
include/ui/: moc_mainwindow.cpp_parameters
src/common/: FloatEx.cpp  NumberEX.cpp  utils.cpp
test/: CMakeLists.txt  test.cpp
test/include/: FloatEx.h  IntEx.h
test/src/: CMakeLists.txt  IntEx.cpp
